--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1 id="heading">ROAD TRIP</h1>
 	<div class="threecolumns">
 		<div class="col-lg-1">
-			<h2>Location <img id="location" src="https://drive.google.com/uc?export=view&id=1ZqBCBw1zaeFJHcMcYAIuefw1svGqg6oP"></h2>
+			<h2><a href="https://goo.gl/maps/sYfUU6ckNApVKqkD6" target="_blank">Location <img id="location" src="https://drive.google.com/uc?export=view&id=1ZqBCBw1zaeFJHcMcYAIuefw1svGqg6oP"></a></h2>
 			<p>Lorem ipsum dolor sit amet, ea admodum delectus intellegat ius, pri an iusto adolescens. Vix an enim meis deterruisset, civibus deterruisset ea usu, ne nec natum alienum sententiae. Usu modo accusam consectetuer ea, nam at magna diceretea admodum delectus intellegat ius, pri an iusto adolescens</p>
 		</div>
 		<div class="col-lg-2">
@@ -19,7 +19,7 @@
 			<p>Lorem ipsum dolor sit amet, ea admodum delectus intellegat ius, pri an iusto adolescens. Vix an enim meis deterruisset, civibus deterruisset ea usu, ne nec natum alienum sententiae. Usu modo accusam consectetuer ea, nam at magna diceretea admodum delectus intellegat ius, pri an iusto adolescens</p>
 		</div>
 		<div class="col-lg-3">
-			<h2>Contact <img id="location" src="https://drive.google.com/uc?export=view&id=1xdtaat59Ka92JOmhITFIUYx6aPvgQSWc"></h2>
+			<h2> <a href="https://www.facebook.com/cube.cube.58173" target="_blank">Contact <img id="location" src="https://drive.google.com/uc?export=view&id=1xdtaat59Ka92JOmhITFIUYx6aPvgQSWc"></a></h2>
 			<p>Lorem ipsum dolor sit amet, ea admodum delectus intellegat ius, pri an iusto adolescens. Vix an enim meis deterruisset, civibus deterruisset ea usu, ne nec natum alienum sententiae. Usu modo accusam consectetuer ea, nam at magna diceretea admodum delectus intellegat ius, pri an iusto adolescens</p>
 		</div>
 	</div>
